--- a/csharp/tools/ZeroC.Ice.Slice.Tools/ZeroC.Ice.Slice.Tools.targets
+++ b/csharp/tools/ZeroC.Ice.Slice.Tools/ZeroC.Ice.Slice.Tools.targets
@@ -70,10 +70,15 @@
 
         <MakeDir Directories="%(SliceCompile.OutputDir)"/>
 
+        <!-- Normalize IceToolsPath -->
+        <PropertyGroup>
+            <_IceToolsPathNormalized>$([MSBuild]::NormalizePath('$(IceToolsPath)'))</_IceToolsPathNormalized>
+        </PropertyGroup>
+
         <!-- First we check dependencies and compute which Slice files need to be recompiled -->
         <Slice2CSharpDependTask
             WorkingDirectory      = "$(MSBuildProjectDirectory)"
-            IceToolsPath          = "$(IceToolsPath)"
+            IceToolsPath          = "$(_IceToolsPathNormalized)"
             Sources               = "@(SliceCompile)">
 
             <Output
@@ -83,18 +88,25 @@
             <Output
                 PropertyName      = "_SliceCompileGeneratedPaths"
                 TaskParameter     = "GeneratedCompiledPaths"/>
-
         </Slice2CSharpDependTask>
+
+        <!-- Normalize the paths in SliceCompile item metadata -->
+        <ItemGroup>
+            <_SliceCompileNormalized Include="@(_SliceCompile)">
+                <OutputDir>$([MSBuild]::NormalizePath('%(_SliceCompile.OutputDir)'))</OutputDir>
+                <IncludeDirectories>$([MSBuild]::NormalizePath('%(_SliceCompile.IncludeDirectories)'))</IncludeDirectories>
+            </_SliceCompileNormalized>
+        </ItemGroup>
 
         <!-- Compile the Slice files -->
         <Slice2CSharpTask
             WorkingDirectory      = "$(MSBuildProjectDirectory)"
-            IceToolsPath          = "$(IceToolsPath)"
-            OutputDir             = "%(_SliceCompile.OutputDir)"
-            IncludeDirectories    = "%(_SliceCompile.IncludeDirectories)"
-            AdditionalOptions     = "%(_SliceCompile.AdditionalOptions)"
-            Sources               = "@(_SliceCompile)"
-            Condition             = "'%(_SliceCompile.BuildRequired)' == 'True'"/>
+            IceToolsPath          = "$(_IceToolsPathNormalized)"
+            OutputDir             = "%(_SliceCompileNormalized.OutputDir)"
+            IncludeDirectories    = "%(_SliceCompileNormalized.IncludeDirectories)"
+            AdditionalOptions     = "%(_SliceCompileNormalized.AdditionalOptions)"
+            Sources               = "@(_SliceCompileNormalized)"
+            Condition             = "'%(_SliceCompileNormalized.BuildRequired)' == 'True'"/>
 
         <!--
             Include all C# generated source items that have not been manually included. We want to delay this until we are
