--- a/csharp/tools/ZeroC.Ice.Slice.Tools/ZeroC.Ice.Slice.Tools.props
+++ b/csharp/tools/ZeroC.Ice.Slice.Tools/ZeroC.Ice.Slice.Tools.props
@@ -12,7 +12,8 @@
 
     <!-- default values -->
     <Choose>
-        <When Condition="Exists('$(MSBuildThisFileDirectory)..\ZeroC.Ice.Slice.Tools.nuspec')">
+        <!-- NuGet creates .nuspec files with all lowercase names -->
+        <When Condition="Exists('$(MSBuildThisFileDirectory)..\zeroc.ice.slice.tools.nuspec')">
             <!-- Use the Slice compiler from this NuGet package -->
             <PropertyGroup>
                 <IceToolsPath>$(MSBuildThisFileDirectory)..\tools\$(IceOSName)-$(IceOSArch)\</IceToolsPath>
@@ -33,23 +34,4 @@
             <OutputDir>$(MSBuildProjectDirectory)\generated</OutputDir>
         </SliceCompile>
     </ItemDefinitionGroup>
-
-    <Choose>
-        <When Condition="Exists('$(MSBuildThisFileDirectory)..\ZeroC.Ice.Slice.Tools.nuspec')">
-            <!-- Default SliceCompile settings for NuGet package -->
-            <ItemDefinitionGroup>
-                <SliceCompile>
-                    <IncludeDirectories>$(MSBuildThisFileDirectory)..\slice</IncludeDirectories>
-                </SliceCompile>
-            </ItemDefinitionGroup>
-        </When>
-        <Otherwise>
-            <!-- Default SliceCompile settings for Ice source builds -->
-            <ItemDefinitionGroup>
-                <SliceCompile>
-                    <IncludeDirectories>$(MSBuildThisFileDirectory)..\..\..\slice</IncludeDirectories>
-                </SliceCompile>
-            </ItemDefinitionGroup>
-        </Otherwise>
-    </Choose>
 </Project>
