--- a/cpp/msbuild/ZeroC.Ice.Cpp.props
+++ b/cpp/msbuild/ZeroC.Ice.Cpp.props
@@ -1,13 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (c) ZeroC, Inc. All rights reserved. -->
+<!-- Copyright (c) ZeroC, Inc. -->
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-    <PropertyGroup>
-        <IceVersion>3.8a0</IceVersion>
-        <IceIntVersion>30800</IceIntVersion>
-        <IceVersionMM>3.8</IceVersionMM>
-        <IceSoVersion>38a0</IceSoVersion>
-        <IceNugetPackageVersion>3.8.0-alpha0</IceNugetPackageVersion>
-    </PropertyGroup>
     <!-- Import Slice Tools props file -->
     <Import Project="$(MSBuildThisFileDirectory)..\ZeroC.Ice.Slice.Tools.Cpp.props" />
 </Project>
