--- a/.github/workflows/build-gem-packages.yml
+++ b/.github/workflows/build-gem-packages.yml
@@ -37,8 +37,11 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Setup Dependencies
-        uses: ./.github/actions/setup-dependencies
+      - name: Setup C++
+        uses: ./.github/actions/setup-cpp
+
+      - name: Setup Ruby
+        uses: ./.github/actions/setup-ruby
 
       - name: Setup Cache
         uses: ./.github/actions/setup-cache
