--- a/.github/workflows/ice2slice.yml
+++ b/.github/workflows/ice2slice.yml
@@ -15,8 +15,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Dependencies
-        uses: ./.github/actions/setup-dependencies
+      - name: Setup C++
+        uses: ./.github/actions/setup-cpp
 
       - name: Build ice2slice
         working-directory: ./cpp
