--- a/.github/workflows/build-dotnet-packages.yml
+++ b/.github/workflows/build-dotnet-packages.yml
@@ -69,7 +69,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup .NET
-        uses: ./github/actions/setup-dotnet
+        uses: ./.github/actions/setup-dotnet
 
       - name: Download All Compiler Artifacts
         uses: actions/download-artifact@v4
