Split setup-dependencies (#3676)

--- a/.github/actions/setup-cache/action.yml
+++ b/.github/actions/setup-cache/action.yml
@@ -20,6 +20,8 @@ runs:
         key: ${{ inputs.prefix }}-${{ runner.os }}-${{ runner.arch }}-${{ github.sha }}
         restore-keys: |
           ${{ inputs.prefix }}-${{ runner.os }}-${{ runner.arch }}
+        max-size: 1G
+        evict-old-files: job
       if: runner.os == 'macOS' || runner.os == 'Linux'
 
     - name: Configure ccache path
