--- a/.github/workflows/build-npm-packages.yml
+++ b/.github/workflows/build-npm-packages.yml
@@ -46,8 +46,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Dependencies
-        uses: ./.github/actions/setup-dependencies
+      - name: Setup C++
+        uses: ./.github/actions/setup-cpp
+
+      - name: Setup Node
+        uses: ./.github/actions/setup-node
 
       - name: Build Compiler
         uses: ./.github/actions/build-slice-compiler
