--- a/.github/actions/setup-cache/action.yml
+++ b/.github/actions/setup-cache/action.yml
@@ -15,34 +15,40 @@ runs:
     - name: Setup ccache
       uses: hendrikmuhs/ccache-action@v1.2
       with:
-        # create-symlink: true
+        create-symlink: false
         append-timestamp: false
         key: ${{ inputs.prefix }}-${{ runner.os }}-${{ runner.arch }}-${{ github.sha }}
         restore-keys: |
           ${{ inputs.prefix }}-${{ runner.os }}-${{ runner.arch }}
         max-size: 1G
         evict-old-files: job
-      if: runner.os == 'macOS' || runner.os == 'Linux'
+        variant: ${{ runner.os == 'Windows' && 'sccache' || 'ccache' }}
 
     - name: Configure ccache path
+      if: runner.os == 'macOS' || runner.os == 'Linux'
+      shell: bash
       run: |
         echo "/usr/lib/ccache" >> $GITHUB_PATH
         echo "/usr/local/opt/ccache/libexec" >> $GITHUB_PATH
         echo "/opt/homebrew/opt/ccache/libexec" >> $GITHUB_PATH
-      shell: bash
-      if: runner.os == 'macOS' || runner.os == 'Linux'
 
-  # - name: Setup Windows Cache
-  #   uses: actions/cache@v4
-  #   with:
-  #     path: |
-  #       **/bin/x64
-  #       **/lib/x64
-  #       **/msbuild/**/x64
-  #       **/include/generated
+    # See https://github.com/ccache/ccache/wiki/MS-Visual-Studio
+    # The same instructions apply to sccache
+    - name: Setup sccache
+      if: runner.os == 'Windows'
+      shell: powershell
+      run: |
+        # Find sccache in path and copy it to cl.exe
+        $sccache = Get-Command sccache.exe -ErrorAction Stop
+        if ($sccache -eq $null) {
+          Write-Host "sccache not found in PATH"
+          exit 1
+        }
 
-  #     key: ci-${{ runner.os }}-${{ matrix.config }}-${{ github.sha }}
-  #     restore-keys: |
-  #       ci-${{ runner.os }}-${{ matrix.config }}-
-  #       ci-${{ runner.os }}-
-  #   if: inputs.cache && runner.os == 'Windows'
+        # Copy $sccache to C:\cl.exe
+        Copy-Item $sccache.Path C:\cl.exe
+
+        # Set required environment variables for ccache to work with MSVC
+        echo "USING_BUILD_CACHE=true" >> $env:GITHUB_ENV
+        echo "CLToolExe=C:\cl.exe" >> $env:GITHUB_ENV
+        echo "CLToolPath=C:\" >> $env:GITHUB_ENV
