--- a/cpp/msbuild/ice.cpp.props
+++ b/cpp/msbuild/ice.cpp.props
@@ -35,11 +35,6 @@
     <IceToolsPath>$(IceHome)\cpp\bin\$(Platform)\$(Configuration)</IceToolsPath>
   </PropertyGroup>
 
-  <PropertyGroup>
-    <!-- UseMultiToolTask=true is required when using ccache or sccache -->
-    <UseMultiToolTask>true</UseMultiToolTask>
-  </PropertyGroup>
-
   <!-- Common properties set for all builds, configurations and platforms. -->
   <ItemDefinitionGroup>
     <ClCompile>
@@ -61,12 +56,6 @@
       <!-- Include directories -->
       <AdditionalIncludeDirectories>$(IceHome)\cpp\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AdditionalIncludeDirectories>$(IceHome)\cpp\include\generated\$(Platform)\$(Configuration);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-    </ClCompile>
-    <!-- See https://github.com/ccache/ccache/wiki/MS-Visual-Studio -->
-    <ClCompile Condition="'$(USING_BUILD_CACHE)' == 'true'">
-      <ForcedIncludeFiles />
-      <DebugInformationFormat>OldStyle</DebugInformationFormat>
-      <ObjectFileName>$(IntDir)%(FileName).obj</ObjectFileName>
     </ClCompile>
     <Link>
       <AdditionalDependencies />
@@ -143,4 +132,16 @@
   <PropertyGroup Condition="'$(Configuration)|$(ConfigurationType)' == 'Release|StaticLibrary'">
     <TargetName>$(ProjectName)$(IceSoVersion)</TargetName>
   </PropertyGroup>
+
+  <!-- See https://github.com/ccache/ccache/wiki/MS-Visual-Studio -->
+  <PropertyGroup Condition="'$(USING_BUILD_CACHE)' == 'true'">
+    <UseMultiToolTask>true</UseMultiToolTask>
+  </PropertyGroup>
+  <ItemDefinitionGroup Condition="'$(USING_BUILD_CACHE)' == 'true'">
+    <ClCompile>
+      <ForcedIncludeFiles />
+      <DebugInformationFormat>OldStyle</DebugInformationFormat>
+      <ObjectFileName>$(IntDir)%(FileName).obj</ObjectFileName>
+    </ClCompile>
+  </ItemDefinitionGroup>
 </Project>
