--- a/csharp/.editorconfig
+++ b/csharp/.editorconfig
@@ -85,7 +85,7 @@ csharp_preferred_modifier_order = public,private,protected,internal,static,exter
 
 # Code-block preferences
 csharp_prefer_braces = true:suggestion
-csharp_prefer_simple_using_statement = true:suggestion
+csharp_prefer_simple_using_statement = true:warning
 
 # Expression-level preferences
 csharp_prefer_simple_default_expression = true:suggestion
