--- a/.github/workflows/nightly-release-scheduler.yml
+++ b/.github/workflows/nightly-release-scheduler.yml
@@ -3,9 +3,10 @@ name: Nightly Release Scheduler
 on:
   schedule:
     # Run every day at 2:00 AM
-    - cron: '0 2 * * *'
+    - cron: "0 2 * * *"
 
 jobs:
   call-build-nightly-release:
+    if: github.event.repository.fork == false
     uses: ./.github/workflows/build-nightly-release-workflow.yml
     secrets: inherit
