Updates this and me prefs to encourage not using "this" when using "this" is unnecessary. One line caught by this change.

--- a/csharp/.editorconfig
+++ b/csharp/.editorconfig
@@ -15,10 +15,10 @@ dotnet_separate_import_directive_groups = false
 dotnet_sort_system_directives_first = false
 
 # this. and Me. preferences
-dotnet_style_qualification_for_event = false:suggestion
-dotnet_style_qualification_for_field = false:suggestion
-dotnet_style_qualification_for_method = false:suggestion
-dotnet_style_qualification_for_property = false:suggestion
+dotnet_style_qualification_for_event = false:warning
+dotnet_style_qualification_for_field = false:warning
+dotnet_style_qualification_for_method = false:warning
+dotnet_style_qualification_for_property = false:warning
 
 # Language keywords vs BCL types preferences
 dotnet_style_predefined_type_for_locals_parameters_members = true:suggestion
