Setup Java with MSI package builder, for IceGridGUI builds

--- a/.github/workflows/build-msi-package.yml
+++ b/.github/workflows/build-msi-package.yml
@@ -49,6 +49,9 @@ jobs:
       - name: Setup C++
         uses: ./ice/.github/actions/setup-cpp
 
+      - name: Setup Java
+        uses: ./ice/.github/actions/setup-java
+
       - name: Download C++ Binaries From NuGet feed
         run: |
           New-Item -ItemType Directory -Path "${{ github.workspace }}\packages"
