--- a/java/gradle/ice.gradle
+++ b/java/gradle/ice.gradle
@@ -5,7 +5,7 @@ buildscript {
         mavenCentral()
 
         maven {
-            url "https://plugins.gradle.org/m2/"
+            url = "https://plugins.gradle.org/m2/"
         }
     }
     dependencies {
