--- a/java/test/android/controller/build.gradle
+++ b/java/test/android/controller/build.gradle
@@ -4,12 +4,11 @@ buildscript {
     repositories {
         google()
         maven {
-            url "https://plugins.gradle.org/m2/"
+            url = "https://plugins.gradle.org/m2/"
         }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:8.9.0'
-        classpath 'gradle.plugin.com.zeroc.gradle.ice-builder:slice:1.5.0'
     }
 }
 
@@ -35,22 +34,18 @@ slice {
 }
 
 repositories {
-    repositories {
-        flatDir dirs: "file://${topSrcDir}/java/lib"
-    }
-
     google()
     mavenCentral()
 }
 
 android {
-    compileSdk 34
+    compileSdk = 34
 
     defaultConfig {
         applicationId "com.zeroc.testcontroller"
-        minSdkVersion 34 // SDK 34 required for Java 17 compatibility
-        targetSdkVersion 34
-        multiDexEnabled true // Necessary otherwise we'd exceed the 64K DEX limit.
+        minSdkVersion = 34 // SDK 34 required for Java 17 compatibility
+        targetSdkVersion = 34
+        multiDexEnabled = true // Necessary otherwise we'd exceed the 64K DEX limit.
         compileOptions {
             // Sets Java compatibility to Java 17
             sourceCompatibility JavaVersion.VERSION_17
@@ -59,21 +54,21 @@ android {
     }
 
     buildFeatures {
-        buildConfig true
+        buildConfig = true
     }
 
     buildTypes {
         debug {
             // Set minifyEnabled to false because the test app loads classes dynamically.
-            minifyEnabled false
+            minifyEnabled = false
         }
 
         release {
             // Set minifyEnabled to false because the test app loads classes dynamically.
-            minifyEnabled false
+            minifyEnabled = false
         }
     }
-    namespace 'com.zeroc.testcontroller'
+    namespace = 'com.zeroc.testcontroller'
 
     sourceSets {
         main {
@@ -97,10 +92,10 @@ clean {
 }
 
 dependencies {
-    implementation ":glacier2-${project.iceVersion}"
-    implementation ":ice-${project.iceVersion}"
-    runtimeOnly ":icediscovery-${project.iceVersion}"
-    runtimeOnly ":icebt-${project.iceVersion}"
+    implementation files("${rootProject.projectDir}/../../../lib/glacier2-${project.iceVersion}.jar")
+    implementation files("${rootProject.projectDir}/../../../lib/ice-${project.iceVersion}.jar")
+    runtimeOnly files("${rootProject.projectDir}/../../../lib/icediscovery-${project.iceVersion}.jar")
+    runtimeOnly files("${rootProject.projectDir}/../../../lib/icebt-${project.iceVersion}.jar")
 
     implementation files("${rootProject.projectDir}/../../../lib/test.jar")
     runtimeOnly "org.apache.commons:commons-compress:1.20"
