--- a/.github/actions/setup-cpp/action.yml
+++ b/.github/actions/setup-cpp/action.yml
@@ -14,7 +14,8 @@ runs:
         sudo apt-get update && sudo apt-get install -y \
             libbz2-dev libssl-dev libffi-dev \
             libmcpp-dev libedit-dev liblmdb-dev libexpat1-dev libsystemd-dev \
-            libbluetooth-dev libdbus-1-dev
+            libbluetooth-dev libdbus-1-dev \
+            gdb
 
     - name: Set macOS MAKEFLAGS
       run: echo "MAKEFLAGS=-j$(sysctl -n hw.ncpu) V=1" >> $GITHUB_ENV
