--- a/.github/actions/test/action.yml
+++ b/.github/actions/test/action.yml
@@ -15,7 +15,7 @@ runs:
   steps:
     - name: Test
       working-directory: ${{ inputs.working_directory }}
-      run: python3 allTests.py --debug --all --continue --workers=4 --export-xml=test-report.xml ${{ inputs.flags }}
+      run: python3 allTests.py --debug --all --workers=4 --export-xml=test-report.xml ${{ inputs.flags }}
       shell: bash
       if: runner.os == 'macOS'
 
@@ -23,12 +23,12 @@ runs:
       working-directory: ${{ inputs.working_directory }}
       run: |
         ulimit -c unlimited
-        python3 allTests.py --debug --all --continue --workers=4 --export-xml=test-report.xml ${{ inputs.flags }}
+        python3 allTests.py --debug --all --workers=4 --export-xml=test-report.xml ${{ inputs.flags }}
       shell: bash
       if: runner.os == 'Linux'
 
     - name: Test
       working-directory: ${{ inputs.working_directory }}
-      run: python allTests.py --debug --all --continue --workers=4 --export-xml=test-report.xml ${{ inputs.flags }}
+      run: python allTests.py --debug --all --workers=4 --export-xml=test-report.xml ${{ inputs.flags }}
       shell: powershell
       if: runner.os == 'Windows'
