--- a/.github/actions/test/action.yml
+++ b/.github/actions/test/action.yml
@@ -23,6 +23,11 @@ runs:
       working-directory: ${{ inputs.working_directory }}
       run: |
         ulimit -c unlimited
+        cat /proc/sys/kernel/core_pattern
+        # sudo sysctl -w kernel.core_pattern=/var/lib/apport/coredump/core.%e.%p.%t
+        cat /proc/sys/fs/suid_dumpable
+        systemctl status apport
+        kill -SIGSEGV $$
         python3 allTests.py --debug --all --workers=4 --export-xml=test-report.xml ${{ inputs.flags }}
       shell: bash
       if: runner.os == 'Linux'
