--- a/.github/actions/test/action.yml
+++ b/.github/actions/test/action.yml
@@ -23,11 +23,7 @@ runs:
       working-directory: ${{ inputs.working_directory }}
       run: |
         ulimit -c unlimited
-        cat /proc/sys/kernel/core_pattern
-        # sudo sysctl -w kernel.core_pattern=/var/lib/apport/coredump/core.%e.%p.%t
-        cat /proc/sys/fs/suid_dumpable
-        systemctl status apport
-        kill -SIGSEGV $$
+        sudo bash -c "echo 'core.%p.%e.%t.%h' >  /proc/sys/kernel/core_pattern"
         python3 allTests.py --debug --all --workers=4 --export-xml=test-report.xml ${{ inputs.flags }}
       shell: bash
       if: runner.os == 'Linux'
