--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -199,15 +199,11 @@ jobs:
           if-no-files-found: ignore
         if: always()
 
-      - name: Generate coredump log
-        if: runner.os == 'Linux' && always()
-        run: coredumpctl info --no-pager ./coredump.log
-
       - name: Upload Linux core dumps
         uses: actions/upload-artifact@v4
         with:
           name: core-dumps-${{ matrix.config }}-${{ matrix.os }}
-          path: ./coredump.log
+          path: /var/lib/systemd/coredump/*
           if-no-files-found: ignore
         if: runner.os == 'Linux' && always()
 
