--- a/.github/actions/setup-cpp/action.yml
+++ b/.github/actions/setup-cpp/action.yml
@@ -14,7 +14,14 @@ runs:
         sudo apt-get update && sudo apt-get install -y \
             libbz2-dev libssl-dev libffi-dev \
             libmcpp-dev libedit-dev liblmdb-dev libexpat1-dev libsystemd-dev \
-            libbluetooth-dev libdbus-1-dev
+            libbluetooth-dev libdbus-1-dev \
+            gdb
+
+    # This is needed for GDB to work on Linux runners
+    - name: Disable ptrace protection on Linux
+      if: runner.os == 'Linux'
+      shell: bash
+      run: echo 0 | sudo tee /proc/sys/kernel/yama/ptrace_scope
 
     - name: Set macOS MAKEFLAGS
       run: echo "MAKEFLAGS=-j$(sysctl -n hw.ncpu) V=1" >> $GITHUB_ENV
